sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
      var echanger:Boolean //on definit un booleen qui nous permettra d'avoir une condition d'arrêt: si on n'a pas échangé deux valeurs précédemment, alors c'est que le tableau est correctement ordonné, donc on arrete la boucle
          ^AlgBubbleSort1:6: error: local variables must be initialized
      var echanger:Boolean //on definit un booleen qui nous permettra d'avoir une condition d'arrêt: si on n'a pas échangé deux valeurs précédemment, alors c'est que le tableau est correctement ordonné, donc on arrete la boucle
          ^AlgBubbleSort1:19: error: not found: value echanger
  while(!echanger)
         ^